# llpc

./: CMakeLists.txt
cmake/: CompilerFlags.cmake
imported/spirv/: spvgen.h
include/: vkgcDefs.h
lgc/patch/: PatchIntrinsicSimplify.cpp
lgc/util/: Internal.cpp
llpc/: CMakeLists.txt
tool/dumper/: CMakeLists.txt
